replace JavaPlugin entry with @BukkitKit metadata and @OnEnable/@OnDisable